# psfex

./: .gitignore  .travis.yml  AUTHORS  BUGS  COPYRIGHT  ChangeLog  HISTORY  INSTALL  Makefile.am  Makefile.in  README  README.md  THANKS  aclocal.m4  acx_fftw.m4  acx_plplot.m4  acx_prog_cc_optim.m4  bootstrap.sh  config.h.in  configure  configure.ac  psfex.spec.in
.github/workflows/: build.yml
config/: default.psfex  prepsfex.param  prepsfex.sex
debian/: Makefile.am  changelog.in  control
doc/: Makefile  Makefile.am  TODO  conf.py  conf.py.in
doc/src/: Appendices.rst  Ending.rst  Examples.rst  GettingStarted.rst  Installing.rst  Introduction.rst  License.rst  Working.rst  conf.py  conf.py.in  index.rst  keys.rst  references.bib  references.rst
m4/: acx_openblas.m4
man/: Makefile.am  Makefile.in  psfex.1  psfex.1.in  psfex.x
src/: Makefile.am  Makefile.in  cathead.h  catout.c  catout.h  check.c  check.h  context.c  context.h  cplot.c  cplot.h  define.h  diagnostic.c  diagnostic.h  dummies.c  fft.c  fft.h  field.c  field.h  field_utils.c  fitswcs.c  fitswcs.h  globals.h  homo.c  homo.h  key.h  main.c  makeit.c  makeit2.c  misc.c  misc.h  pc.c  pca.c  pca.h  poly.c  poly.h  preflist.h  prefs.c  prefs.h  psf.c  (+16 more)
src/fits/: Makefile.in  fitscat.h  fitsmisc.c  fitswrite.c
src/levmar/: Axb_core.c  Makefile.am  Makefile.in  compiler.h  lmblec.c  misc_core.c
src/lmfit/: Makefile.in
src/wcs/: Makefile  Makefile.in  poly.c  poly.h
xsl/: psfex.xsl
