# Makefile.am for the levmar Levenberg-Marquardt fitting library
# Copyright (C) 2007 Emmanuel Bertin.
# levmar code by Manolis Lourakis <lourakis@ics.forth.gr> 
# http://www.ics.forth.gr/~lourakis/levmar/
noinst_LIBRARIES	= liblevmar.a
liblevmar_a_SOURCES	= lm.c Axb.c misc.c lmlec.c lmbc.c \
			  lm.h misc.h
